--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         <artifactId>javafx-fxml</artifactId>
         <version>17</version>
     </dependency>
+    <dependency>
+    <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>17</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.kordamp.ikonli</groupId>
