--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic", 
     "java.project.referencedLibraries": [
-        "C:\\Program Files\\OpenJDK\\javafx-sdk-17.0.7\\lib"
+        "C:\\SDK\\Java\\javafx-sdk-17.0.7\\lib"
     ]
 }
