first draft of coverartproject's search to the game and cover search object

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
         <version>17</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.16.1</version> 
+    </dependency>
     <dependency>
       <groupId>org.kordamp.ikonli</groupId>
       <artifactId>ikonli-javafx</artifactId>
