--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
   </properties>
 
   <dependencies>
-
+    <dependency> 
+        <groupId>org.json</groupId> 
+        <artifactId>json</artifactId> 
+        <version>20230227</version> 
+    </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
