--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.11.0</version>
+    </dependency>
     <dependency> 
         <groupId>org.json</groupId> 
         <artifactId>json</artifactId> 
